[package]
name = "keyparty"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = { version = "0.97.0", features = ["address-lookup-mdns"] }
# iroh-blobs = "0.97.0"
iroh-gossip = "0.97.0"
toml = "0.9.8"
snafu = "0.9.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.19"
clap = "4.5.54"
clap_derive = "4.5.49"
n0-error = "0.1.3"
serde = "1.0.228"
serde_derive = "1.0.228"
tracing = "0.1.44"
rand = "0.8.2"
n0-future = "0.3.2"
bytes = "1.11.0"
iroh-tickets = "0.4.0"
frost-ed25519 = { version = "2.2.0", features = ["serde"] }
anyhow = "1.0.102"
irpc = "0.13.0"
irpc-iroh = "0.13.0"
iroh-base = { version = "0.97.0", features = ["key"] }
postcard = "1.1.3"
derive_more = { version = "2.1.1", features = ["display"] }
data-encoding = "2.10.0"
n0-snafu = "0.2.2"
chrono = "0.4.42"
new_rand = { package = "rand", version = "0.9.2" }
rcan = "0.3.0"
